assets/css/gallery.css
html, body {
  width: 100%;
  margin-top: 26px;
  padding: 0;
  overflow-x:hidden;  
}
#white_img {
  width: 100%;
  min-height: 100vh; 
  position: relative;      
}
#white_img::before {
  content: "";
  position: absolute;
  top: 52px; 
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-color: rgba(238, 238, 248, 0.89);
  background-repeat: no-repeat;
  background-size: cover;
}
.bg-img {
  display: inline-block;
  width: 100%;
  font-size: 0;
  vertical-align: middle;
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
 }
.container-fluid {
  color:  rgb(12, 11, 11);
  padding-top: 50px;
  padding-bottom: 30px;
  letter-spacing: 3px;
  font-family: proxima-nova, sans-serif !important;
} 
.col-md-4 {
  margin-top: 0px;                    
  margin-left: 0px;
}
.img {
  width: 500px;
  height: 500px;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover; 
}
.thumbnail img {
  height:auto; 
  width:100%;
}
.thumbnail img:hover {
  transform: scale(1.1);
  transform: 1s;
}
.text-grey {
  color:  rgb(12, 11, 11);
}

